# pytesthookcsone

./: .flake8  README.md  conftest.py  pyproject.toml  pytest.ini
src/: plugin.py
tests/: test_unit.py
